--- a/apps/website/src/pages/docs/components/authentication/auth/usage.mdx
+++ b/apps/website/src/pages/docs/components/authentication/auth/usage.mdx
@@ -34,7 +34,7 @@ import {
   UpdatePasswordForm,
   OtpForm,
   Providers,
-} from '@saas-ui/react'
+} from '@saas-ui/auth'
 ```
 
 ## Usage
@@ -42,7 +42,7 @@ import {
 `Auth` is an higher order component that handles the rendering of all the specific authentication forms.
 If you need more flexiblity it's possible to use these components directly.
 
-`Auth` depends on context provided by `AuthProvider`, if you haven't done so already, first [add it to your App root](/docs/auth/auth-provider).
+`Auth` depends on context provided by `AuthProvider`, if you haven't done so already, first [add it to your App root](/docs/authentication/auth-provider).
 
 ### Basic usage
 
