--- a/apps/website/src/pages/docs/core/integrations/magic.mdx
+++ b/apps/website/src/pages/docs/core/integrations/magic.mdx
@@ -28,14 +28,14 @@ yarn add magic-sdk @saas-ui/magic
 If you haven't done so already install `magic-sdk`.
 
 ```bash
-yarn add magic-sdk
+yarn add @saas-ui/auth @saas-ui/magic magic-sdk
 ```
 
 ### Setup AuthProvider
 
 ```tsx
 import { Magic } from 'magic-sdk'
-import { AuthProvider } from '@saas-ui/react'
+import { AuthProvider } from '@saas-ui/auth'
 import { createAuthService } from '@saas-ui/magic'
 
 const magic = new Magic(process.env.MAGIC_API_KEY)
@@ -49,4 +49,4 @@ function App({ children }) {
 }
 ```
 
-That's it! Check the [Auth documentation](/docs/components/auth/auth) to see how to add authentication screens to your app.
+That's it! Check the [Auth documentation](/docs/components/authentication/auth) to see how to add authentication screens to your app.
