feat: auth now support an onError handler

--- a/apps/website/src/pages/docs/components/authentication/auth/usage.mdx
+++ b/apps/website/src/pages/docs/components/authentication/auth/usage.mdx
@@ -93,6 +93,30 @@ The default authentication strategy is `magiclink`.
 </Stack>
 ```
 
+### Error handler
+
+The `Auth` component accepts an `onError` prop that can be used to handle errors.
+You can use the `useSnackbar` hook to display a message.
+
+```jsx
+import { Auth } from '@saas-ui/auth'
+import { useSnackbar } from '@saas-ui/react'
+
+export default function ErrorHandler() {
+  const snackbar = useSnackbar()
+
+  return (
+    <Auth
+      onError={(view, error) => {
+        if (view === 'login' && error) {
+          snackbar.error(error.message)
+        }
+      }}
+    />
+  )
+}
+```
+
 ### Custom links
 
 ```jsx
@@ -121,7 +145,11 @@ function LoginPage() {
 ### Custom sign up page
 
 ```jsx
-function SignUpPage() {
+import { Card, CardBody } from '@chakra-ui/react'
+import { FormLayout, Field } from '@saas-ui/react'
+import { PasswordForm } from '@saas-ui/auth'
+
+export default function SignUpPage() {
   return (
     <Card title="Sign up for free">
       <CardBody>
@@ -141,13 +169,18 @@ function SignUpPage() {
 ### Schema validation
 
 ```jsx
-function LoginPage() {
-  const schema = Yup.object({
-    email: Yup.string()
+import * as yup from 'yup'
+import { yupResolver } from '@hookform/resolvers/yup'
+import { PasswordForm } from '@saas-ui/auth'
+
+export default function LoginPage() {
+  const schema = yup.object({
+    email: yup
+      .string()
       .email('Invalid email address')
       .required()
       .label('Email'),
-    password: Yup.string().min(4).required().label('Password'),
+    password: yup.string().min(4).required().label('Password'),
   })
   return (
     <PasswordForm
