chore: update code highlighting

--- a/apps/website/src/pages/docs/pro/configuration/authentication.mdx
+++ b/apps/website/src/pages/docs/pro/configuration/authentication.mdx
@@ -15,7 +15,7 @@ cd packages/app-config && yarn add @supabase/supabase-js @saas-ui/supabase
 
 2. Copy `apps/nextjs/.env.example` to `apps/nextjs/.env` and add your public Supabase URL and KEY.
 
-```
+```bash
 NEXT_PUBLIC_SUPABASE_URL="https://x.supabase.co"
 NEXT_PUBLIC_SUPABASE_KEY="x"
 ```
@@ -44,7 +44,7 @@ cd packages/app-config && yarn add magic-sdk @saas-ui/magic
 
 2. Copy `apps/nextjs/.env.example` to `apps/nextjs/.env` and add your public Magic API Key.
 
-```
+```bash
 NEXT_PUBLIC_MAGIC_API_KEY="..."
 ```
 
