feat: update chakra to 2.6

--- a/apps/website/src/pages/docs/components/forms/step-form/usage.mdx
+++ b/apps/website/src/pages/docs/components/forms/step-form/usage.mdx
@@ -185,7 +185,7 @@ export default function CreateProject() {
     },
     {
       name: 'members',
-      schema: zod.object().shape({
+      schema: zod.object({
         members: zod.string(),
       }),
     },
