--- a/apps/website/src/pages/docs/components/navigation/stepper/usage.mdx
+++ b/apps/website/src/pages/docs/components/navigation/stepper/usage.mdx
@@ -1,93 +1,165 @@
 ---
 id: stepper
-title: Stepper
+title: Steps
 description: Indicate progress through numbered steps in multi-step workflows.
 ---
 
 <ComponentLinks
-  github={{ package: 'saas-ui-stepper' }}
-  npm={{ package: '@saas-ui/stepper' }}
-  theme={{ theme: 'saas-ui', componentName: 'stepper' }}
+  github={{ package: 'saas-ui-core' }}
+  npm={{ package: '@saas-ui/core' }}
+  theme={{ theme: 'saas-ui', componentName: 'steps' }}
 />
 
 ## Import
 
-- `Stepper`: The wrapper component provides context and state management.
-- `StepperSteps`: Manages redering of steps and completed states.
-- `StepperStep`: The form step rendering an icon and a title.
-- `StepperCompleted`: The completed content.
+- `Steps`: The wrapper component provides context and state management.
+- `StepsItem`: Manages redering of steps and completed states.
+- `StepsCompleted`: The completed content.
 
 ```ts
-import {
-  Stepper,
-  StepperSteps,
-  StepperStep,
-  StepperCompleted,
-} from '@saas-ui/react'
+import { Steps, StepsItem, StepsCompleted } from '@saas-ui/react'
 ```
 
 ## Usage
 
+The `Steps` component is a wrapper around the Chakra UI Stepper component and makes it easier to manage state and content of the steps.
+
 ### Basic
 
 ```jsx
-<Stepper step={1}>
-  <StepperStep title="Personal information" />
-  <StepperStep title="Account" />
-  <StepperStep title="Confirmation" />
-</Stepper>
+import { Steps, StepsItem, StepsCompleted } from '@saas-ui/react'
+
+export default function Basic() {
+  return (
+    <Steps step={1}>
+      <StepsItem title="Personal information" />
+      <StepsItem title="Account" />
+      <StepsItem title="Confirmation" />
+    </Steps>
+  )
+}
 ```
 
 ### Vertical
 
+Use the `orientation` prop to change the stepper to a vertical layout.
+
 ```jsx
-<Stepper step={1} orientation="vertical">
-  <StepperStep title="Personal information" />
-  <StepperStep title="Account" />
-  <StepperStep title="Confirmation" />
-</Stepper>
+import { Steps, StepsItem, StepsCompleted } from '@saas-ui/react'
+
+export default function Vertical() {
+  return (
+    <Steps step={1} orientation="vertical">
+      <StepsItem title="Personal information" />
+      <StepsItem title="Account" />
+      <StepsItem title="Confirmation" />
+    </Steps>
+  )
+}
 ```
 
 ### Variants
 
+The Saas UI theme comes with 3 variants, `outline`, `solid` and `subtle`.
+
 #### Outline
 
 ```jsx
-<Stepper step={1} variant="outline">
-  <StepperStep title="Personal information" />
-  <StepperStep title="Account" />
-  <StepperStep title="Confirmation" />
-</Stepper>
+<Steps step={1}>
+  <StepsItem title="Personal information" />
+  <StepsItem title="Account" />
+  <StepsItem title="Confirmation" />
+</Steps>
 ```
 
 #### Solid
 
 ```jsx
-<Stepper step={1} variant="solid">
-  <StepperStep title="Personal information" />
-  <StepperStep title="Account" />
-  <StepperStep title="Confirmation" />
-</Stepper>
+<Steps step={1} variant="solid">
+  <StepsItem title="Personal information" />
+  <StepsItem title="Account" />
+  <StepsItem title="Confirmation" />
+</Steps>
 ```
 
 #### Subtle
 
 ```jsx
-<Stepper step={1} variant="subtle">
-  <StepperStep title="Personal information" />
-  <StepperStep title="Account" />
-  <StepperStep title="Confirmation" />
-</Stepper>
+<Steps step={1} variant="subtle">
+  <StepsItem title="Personal information" />
+  <StepsItem title="Account" />
+  <StepsItem title="Confirmation" />
+</Steps>
 ```
 
-#### Custom icons
+### Custom steps
+
+Use the `render` prop to render custom steps.
 
 ```jsx
-<Stepper step={0} variant="subtle">
-  <StepperStep title="Personal information" icon={<FiUsers />} />
-  <StepperStep title="Account" icon={<FiLock />} />
-  <StepperStep title="Confirmation" icon={<FiCheck />} />
-</Stepper>
+import { Steps, StepsItem, StepsCompleted } from '@saas-ui/react'
+
+import {
+  Box,
+  Step,
+  StepIndicator,
+  StepStatus,
+  StepIcon,
+  StepNumber,
+  StepTitle,
+  StepDescription,
+  StepSeparator,
+} from '@chakra-ui/react'
+
+const steps = [
+  {
+    name: 'step 1',
+    title: 'First step',
+    children: <Box py="4">Content step 1</Box>,
+  },
+  {
+    name: 'step 2',
+    title: 'Second step',
+    children: <Box py="4">Content step 2</Box>,
+  },
+  {
+    name: 'step 3',
+    title: 'Third step',
+    children: <Box py="4">Content step 3</Box>,
+  },
+]
+
+export default function Custom() {
+  return (
+    <Steps step={1}>
+      {steps.map((step, i) => (
+        <StepsItem
+          key={i}
+          {...step}
+          render={() => (
+            <Step>
+              <StepIndicator>
+                <StepStatus
+                  complete={<StepIcon />}
+                  incomplete={<StepNumber />}
+                  active={<StepNumber />}
+                />
+              </StepIndicator>
+
+              <Box flexShrink="0">
+                <StepTitle>{step.title}</StepTitle>
+                <StepDescription>{step.description}</StepDescription>
+              </Box>
+
+              <StepSeparator />
+            </Step>
+          )}
+        />
+      ))}
+      <StepsCompleted py="4">Completed</StepsCompleted>
+    </Steps>
+  )
+}
 ```
 
 ### Responsive Mobile stepper
@@ -98,14 +170,14 @@ If you have more then 3 steps it's recommended to use a vertical stepper instead
 ```jsx
 function ResponsiveStepper() {
   return (
-    <Stepper
+    <Steps
       step={1}
       orientation={useBreakpointValue({ base: 'vertical', md: 'horizontal' })}
     >
-      <StepperStep title="Personal information" />
-      <StepperStep title="Account" />
-      <StepperStep title="Confirmation" />
-    </Stepper>
+      <StepsItem title="Personal information" />
+      <StepsItem title="Account" />
+      <StepsItem title="Confirmation" />
+    </Steps>
   )
 }
 ```
@@ -144,12 +216,12 @@ function WithContent() {
 
   return (
     <>
-      <Stepper step={step} mb="2">
+      <Steps step={step} mb="2">
         {steps.map((args, i) => (
-          <StepperStep key={i} {...args} />
+          <StepsItem key={i} {...args} />
         ))}
-        <StepperCompleted py="4">Completed</StepperCompleted>
-      </Stepper>
+        <StepsCompleted py="4">Completed</StepsCompleted>
+      </Steps>
       <ButtonGroup width="100%">
         <Button
           label="Back"
@@ -252,12 +324,12 @@ function VerticalContent() {
 
   return (
     <>
-      <Stepper step={step} mb="2" orientation="vertical">
+      <Steps step={step} mb="2" orientation="vertical">
         {steps.map((args, i) => (
-          <StepperStep key={i} {...args} />
+          <StepsItem key={i} {...args} />
         ))}
-        <StepperCompleted py="4">Completed</StepperCompleted>
-      </Stepper>
+        <StepsCompleted py="4">Completed</StepperCompleted>
+      </Steps>
     </>
   )
 }
